--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,14 @@ body {
 button {
 	color: #ffffff;
 	background-color: transparent;
+	border: none;
+	outline: none;
+	cursor: pointer;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
 }
 
 .container {
