--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -34,10 +34,30 @@
 	composes: mr-10 from global;
 }
 
-.noneIngredientsWrap {
+.dragitem {
+	position: relative;
 	display: flex;
-	justify-content: center;
 	align-items: center;
-	width: 100%;
-	height: 100%;
+	cursor: grab;
+}
+
+.dragIcon {
+	composes: mr-2 from global;
+}
+
+.modalWrapper {
+	composes: pt-30 pb-30 from global;
+}
+
+.modalIdTitle {
+	composes: text text_type_digits-large from global;
+	composes: mb-8 from global;
+}
+
+.modalIdText {
+	composes: text text_type_main-medium from global;
+}
+
+.modalImage {
+	composes: mt-15 mb-15 from global;
 }
