--- a/src/components/burger-ingredients/ingredient-card/ingredient-card.module.css
+++ b/src/components/burger-ingredients/ingredient-card/ingredient-card.module.css
@@ -1,4 +1,5 @@
 .card {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	border: 2px solid transparent;
@@ -10,6 +11,20 @@
 
 .card:hover {
 	border-color: #4c4cff;
+}
+
+.counter {
+	position: absolute;
+	top: -8px;
+	right: -2px;
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
+	background-color: #4C4CFF;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	composes: text text_type_digits-default from global;
 }
 
 .digits {
