--- a/src/pages/order-feed/order-feed.module.css
+++ b/src/pages/order-feed/order-feed.module.css
@@ -13,7 +13,6 @@
 
 .status {
 	composes: mb-15 from global;
-
 	display: flex;
 	gap: 36px;
 }
@@ -24,7 +23,7 @@
 }
 
 .ready {
-	color: #00CCCC;
+	color: #00cccc;
 	composes: mb-2 text text_type_digits-default from global;
 }
 
